Removed deprecated java features